[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["ukastsiukevich <grun_gespenst@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.48.2"
torch = "^2.6.0"
accelerate = "^1.3.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
